# nikkei225_etf_quant

./: .env.example  .gitignore  CODEX_SUPERVISOR_README.md  README.md  REAL_DATA_MODEL_SEARCH.md  Start-CodexQuantAgent.ps1  Start-RealDataModelSearch.ps1  nikkei225_etf_quant_codex_implementation_spec.md  pyproject.toml  requirements.txt
config/: ai_review.yaml  backtest.yaml  daily_review.yaml  data_sources.yaml  historical.yaml  labeling.yaml  model.yaml  paper_account.yaml  strategy.yaml  symbols.yaml
config/experiments/: aggressive_stable_loss.yaml  bounded_stable_loss.yaml  (+86 more)
docs/: architecture_review.md  backtest_report_template.md
market_data_collector/: .env.example  .gitignore  README.md  pyproject.toml
market_data_collector/src/market_data_collector/: __init__.py  calendar.py  cli.py  config.py  logging_config.py  models.py  resample.py  storage.py  validate.py
market_data_collector/src/market_data_collector/providers/: __init__.py  base.py  jquants.py  twelvedata.py  yfinance_provider.py
market_data_collector/tests/: test_resample.py  test_storage.py  test_validate.py
src/: __init__.py  main.py
tests/: test_backtest_engine.py  test_backtest_risk_filters.py  test_bar_builder.py  test_batch_search.py  test_config_loader.py  test_cost_model.py  test_data_validator.py  test_event_audit.py  test_features.py  test_implied_nikkei.py  test_labeler.py  test_monthly_returns.py  test_paper_account.py  test_provider_interfaces.py  test_report_outputs.py  test_resampler.py  test_symbol_mapper.py  test_training_cycle_report.py  test_walk_forward.py
(+62 files in other folders)
