[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nikkei225-etf-quant"
version = "0.1.0"
description = "Safe historical and paper backtesting project for Nikkei 225 ETF strategies."
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.0",
  "numpy>=1.24",
  "PyYAML>=6.0",
  "scikit-learn>=1.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
