[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "market-data-collector"
version = "0.1.0"
description = "Historical market data collector for Nikkei 225 related Japanese ETFs."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27",
  "pandas>=2.0",
  "pyarrow>=14",
  "pydantic>=2",
  "pydantic-settings>=2",
  "python-dotenv>=1",
  "tenacity>=8",
  "typer>=0.12",
  "rich>=13",
  "yfinance>=0.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.6",
]

[project.scripts]
market-data-collector = "market_data_collector.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]
